# eim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  custom.config  eim  eim.cmd  eim.go  go.mod  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: create_assets.yml
core/: app_config.py  behavior_context.py  buffer.py  builtin_commands.py  color_theme.py  context.py  editor_client.py  editor_config.py  editor_server.py  key_bindings.py  url_helper.py
plugins/buffer_list/: plugin.py
plugins/commands_window/: commands_window.yapsy-plugin  plugin.py
plugins/copy_paste_history/: __init__.py  plugin.py
plugins/directory_content/: plugin.py
plugins/goto_line/: goto_line.yapsy-plugin  plugin.py
plugins/grep_tool/: ag_tool.py  grep_tool.py  plugin.py
plugins/highlight_line_column/: plugin.py
plugins/line_number_area/: plugin.py
plugins/mode_line_area/: __init__.py  mode_line_area.py  mode_line_area.yapsy-plugin  plugin.py
plugins/neovim_tree_sitter/: tree_sitter_langs.py
plugins/search_window/: plugin.py  search_window.yapsy-plugin
plugins/tree_sitter/: neovim_query_convert.py  neovim_tree_sitter_highlighter_state.py  plugin.py  tree_sitter.yapsy-plugin  tree_sitter_autoindent.py  tree_sitter_highlighter.py  tree_sitter_highlighter_state.py  tree_sitter_langs.py  tree_sitter_tree.py
qpa/: CMakeLists.txt
qpa/theme/: CMakeLists.txt  platformplugin.cpp  platformplugin.h  qeimplatformtheme.cpp  qeimplatformtheme.h  qeimplatformtheme.json
scripts/: ci-install-macos-latest.sh  ci-install-ubuntu-latest.sh  ci-install-windows-2022.sh
src/: CMakeLists.txt  command.h  main.py
src/commands/: CMakeLists.txt  cmd_base.h  get_buffer_cmd.cxx
src/core/: CMakeLists.txt  buffer.cxx  buffer.h  buffer.py  buffer_client.h  buffer_manager.cxx  buffer_manager.h  buffer_session.h  buffer_session_manager.cxx  buffer_session_manager.h  command.h  command_manager.cxx  command_manager.h  command_register.h  context.py  editor_client.py  editor_server.py  eim_context.cxx  eim_context.h  eim_core.h  file_buffer.cxx  file_buffer.h  project_root.json  project_root.py
src/eim/: eim.py  main.py
src/eim/core/: app_config.py  behavior_context.py  buffer.py  builtin_commands.py  color_theme.py  context.py  editor_client.py  editor_config.py  key_bindings.py  project_root.json  project_root.py  url_helper.py
src/eim/plugins/buffer_list/: plugin.py
src/eim/plugins/copy_paste_history/: __init__.py  copy_paste_history.yapsy-plugin  plugin.py
src/eim/plugins/directory_content/: plugin.py
src/eim/plugins/goto_line/: plugin.py
src/eim/plugins/grep_tool/: ag_tool.py  grep_tool.py  grep_tool.yapsy-plugin  plugin.py  pyeverything_tool.py
src/eim/plugins/highlight_line_column/: highlight_line_column.yapsy-plugin  plugin.py
src/eim/plugins/line_number_area/: line_number_area.yapsy-plugin  plugin.py
src/eim/plugins/mode_line_area/: mode_line_area.py  mode_line_area.yapsy-plugin  plugin.py
src/eim/plugins/neovim_tree_sitter/: plugin.py  tree_sitter_langs.py
src/eim/plugins/replace_window/: plugin.py
src/eim/plugins/search_window/: plugin.py
src/eim/plugins/tree_sitter/: neovim_query_convert.py  neovim_tree_sitter_highlighter_state.py  plugin.py  tree_sitter_autoindent.py  tree_sitter_highlighter.py  tree_sitter_highlighter_state.py  tree_sitter_langs.py  tree_sitter_tree.py
src/eim/themes/zenburn/: themes.json
src/eim/ui/: content_windows.py  editor.py  input_content_window.py  list_content_window.py  list_with_preview_content_window.py  marker_mixin.py  textedit_mixin.py  ui_helper.py
src/plugins/buffer_list/: buffer_list.yapsy-plugin
src/plugins/directory_content/: directory_content.yapsy-plugin
src/plugins/neovim_tree_sitter/: neovim_tree_sitter.yapsy-plugin
src/plugins/replace_window/: plugin.py  replace_window.yapsy-plugin
src/plugins/tree_sitter/: neovim_query_convert.py  tree_sitter_highlighter.py  tree_sitter_highlighter_state.py
src/scintilla/: CMakeLists.txt
src/scintilla/cocoa/: scintilla_cocoa.h  scintilla_cocoa.mm
src/scite/: CMakeLists.txt  keybinding_extension.cxx  keybinding_extension.h  scite_init.cxx
src/scite/cocoa/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  MainMenu.xib  SciTEWindow.h  SciTEWindow.mm  gui_cocoa.cxx  main.m  scite_cocoa.cxx  scite_cocoa.h  scite_cocoa.mm
src/scite/gtk/: CMakeLists.txt
src/scite/key_binding/: CMakeLists.txt  key_binding.cxx  key_binding.h  key_binding_cmds.cxx  key_binding_cmds.h
src/ui/: input_content_window.py  ui_helper.py
tests/: CMakeLists.txt  sdl2_example.go  test_buffer.cxx  test_file_buffer.cxx  test_get_buffer_cmd.cxx  test_multiple_key_shortcut.py  test_treeview.py  test_url.py  window_flags.py
themes/zenburn/: themes.json
ui/: content_windows.py  editor.py  input_content_window.py  list_content_window.py  list_with_preview_content_window.py  marker_mixin.py  textedit_mixin.py  ui_helper.py
