[metadata]
name = eim-stonewell
version = 0.0.1
author = Jingnan Si
author_email = jingnan.si+eim@gmail.com
description = a simple programming editor using PySide6
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stonewell/eim
project_urls =
    Bug Tracker = https://github.com/stonewell/eim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.8
install_requires =
    pyside6==6.3.0
    yapsy
    pluggy
    appdirs
    fuzzywuzzy
    python-Levenshtein
    GitPython
    PyPubSub
    editorconfig
    #tree_sitter @ git+https://github.com/stonewell/py-tree-sitter

[options.packages.find]
where = src

[options.package_data]
* = *.so, *.dll, main.py
