SET(scintilla_src ../../third_party/scintilla/src/AutoComplete.cxx
../../third_party/scintilla/src/AutoComplete.h
../../third_party/scintilla/src/CallTip.cxx
../../third_party/scintilla/src/CallTip.h
../../third_party/scintilla/src/CaseConvert.cxx
../../third_party/scintilla/src/CaseConvert.h
../../third_party/scintilla/src/CaseFolder.cxx
../../third_party/scintilla/src/CaseFolder.h
../../third_party/scintilla/src/Catalogue.cxx
../../third_party/scintilla/src/Catalogue.h
../../third_party/scintilla/src/CellBuffer.cxx
../../third_party/scintilla/src/CellBuffer.h
../../third_party/scintilla/src/CharClassify.cxx
../../third_party/scintilla/src/CharClassify.h
../../third_party/scintilla/src/ContractionState.cxx
../../third_party/scintilla/src/ContractionState.h
../../third_party/scintilla/src/DBCS.cxx
../../third_party/scintilla/src/DBCS.h
../../third_party/scintilla/src/Decoration.cxx
../../third_party/scintilla/src/Decoration.h
../../third_party/scintilla/src/Document.cxx
../../third_party/scintilla/src/Document.h
../../third_party/scintilla/src/EditModel.cxx
../../third_party/scintilla/src/EditModel.h
../../third_party/scintilla/src/EditView.cxx
../../third_party/scintilla/src/EditView.h
../../third_party/scintilla/src/Editor.cxx
../../third_party/scintilla/src/Editor.h
../../third_party/scintilla/src/ElapsedPeriod.h
../../third_party/scintilla/src/ExternalLexer.cxx
../../third_party/scintilla/src/ExternalLexer.h
../../third_party/scintilla/src/FontQuality.h
../../third_party/scintilla/src/Indicator.cxx
../../third_party/scintilla/src/Indicator.h
../../third_party/scintilla/src/IntegerRectangle.h
../../third_party/scintilla/src/KeyMap.cxx
../../third_party/scintilla/src/KeyMap.h
../../third_party/scintilla/src/LineMarker.cxx
../../third_party/scintilla/src/LineMarker.h
../../third_party/scintilla/src/MarginView.cxx
../../third_party/scintilla/src/MarginView.h
../../third_party/scintilla/src/Partitioning.h
../../third_party/scintilla/src/PerLine.cxx
../../third_party/scintilla/src/PerLine.h
../../third_party/scintilla/src/Position.h
../../third_party/scintilla/src/PositionCache.cxx
../../third_party/scintilla/src/PositionCache.h
../../third_party/scintilla/src/RESearch.cxx
../../third_party/scintilla/src/RESearch.h
../../third_party/scintilla/src/RunStyles.cxx
../../third_party/scintilla/src/RunStyles.h
../../third_party/scintilla/src/SciTE.properties
../../third_party/scintilla/src/ScintillaBase.cxx
../../third_party/scintilla/src/ScintillaBase.h
../../third_party/scintilla/src/Selection.cxx
../../third_party/scintilla/src/Selection.h
../../third_party/scintilla/src/SparseVector.h
../../third_party/scintilla/src/SplitVector.h
../../third_party/scintilla/src/Style.cxx
../../third_party/scintilla/src/Style.h
../../third_party/scintilla/src/UniConversion.cxx
../../third_party/scintilla/src/UniConversion.h
../../third_party/scintilla/src/UniqueString.h
../../third_party/scintilla/src/ViewStyle.cxx
../../third_party/scintilla/src/ViewStyle.h
../../third_party/scintilla/src/XPM.cxx
../../third_party/scintilla/src/XPM.h
)

SET(scintilla_lexers_src ../../third_party/scintilla/lexers/LexA68k.cxx
../../third_party/scintilla/lexers/LexAPDL.cxx
../../third_party/scintilla/lexers/LexASY.cxx
../../third_party/scintilla/lexers/LexAU3.cxx
../../third_party/scintilla/lexers/LexAVE.cxx
../../third_party/scintilla/lexers/LexAVS.cxx
../../third_party/scintilla/lexers/LexAbaqus.cxx
../../third_party/scintilla/lexers/LexAda.cxx
../../third_party/scintilla/lexers/LexAsm.cxx
../../third_party/scintilla/lexers/LexAsn1.cxx
../../third_party/scintilla/lexers/LexBaan.cxx
../../third_party/scintilla/lexers/LexBash.cxx
../../third_party/scintilla/lexers/LexBasic.cxx
../../third_party/scintilla/lexers/LexBatch.cxx
../../third_party/scintilla/lexers/LexBibTeX.cxx
../../third_party/scintilla/lexers/LexBullant.cxx
../../third_party/scintilla/lexers/LexCLW.cxx
../../third_party/scintilla/lexers/LexCOBOL.cxx
../../third_party/scintilla/lexers/LexCPP.cxx
../../third_party/scintilla/lexers/LexCSS.cxx
../../third_party/scintilla/lexers/LexCaml.cxx
../../third_party/scintilla/lexers/LexCmake.cxx
../../third_party/scintilla/lexers/LexCoffeeScript.cxx
../../third_party/scintilla/lexers/LexConf.cxx
../../third_party/scintilla/lexers/LexCrontab.cxx
../../third_party/scintilla/lexers/LexCsound.cxx
../../third_party/scintilla/lexers/LexD.cxx
../../third_party/scintilla/lexers/LexDMAP.cxx
../../third_party/scintilla/lexers/LexDMIS.cxx
../../third_party/scintilla/lexers/LexDiff.cxx
../../third_party/scintilla/lexers/LexECL.cxx
../../third_party/scintilla/lexers/LexEDIFACT.cxx
../../third_party/scintilla/lexers/LexEScript.cxx
../../third_party/scintilla/lexers/LexEiffel.cxx
../../third_party/scintilla/lexers/LexErlang.cxx
../../third_party/scintilla/lexers/LexErrorList.cxx
../../third_party/scintilla/lexers/LexFlagship.cxx
../../third_party/scintilla/lexers/LexForth.cxx
../../third_party/scintilla/lexers/LexFortran.cxx
../../third_party/scintilla/lexers/LexGAP.cxx
../../third_party/scintilla/lexers/LexGui4Cli.cxx
../../third_party/scintilla/lexers/LexHTML.cxx
../../third_party/scintilla/lexers/LexHaskell.cxx
../../third_party/scintilla/lexers/LexHex.cxx
../../third_party/scintilla/lexers/LexIndent.cxx
../../third_party/scintilla/lexers/LexInno.cxx
../../third_party/scintilla/lexers/LexJSON.cxx
../../third_party/scintilla/lexers/LexKVIrc.cxx
../../third_party/scintilla/lexers/LexKix.cxx
../../third_party/scintilla/lexers/LexLaTeX.cxx
../../third_party/scintilla/lexers/LexLisp.cxx
../../third_party/scintilla/lexers/LexLout.cxx
../../third_party/scintilla/lexers/LexLua.cxx
../../third_party/scintilla/lexers/LexMMIXAL.cxx
../../third_party/scintilla/lexers/LexMPT.cxx
../../third_party/scintilla/lexers/LexMSSQL.cxx
../../third_party/scintilla/lexers/LexMagik.cxx
../../third_party/scintilla/lexers/LexMake.cxx
../../third_party/scintilla/lexers/LexMarkdown.cxx
../../third_party/scintilla/lexers/LexMatlab.cxx
../../third_party/scintilla/lexers/LexMaxima.cxx
../../third_party/scintilla/lexers/LexMetapost.cxx
../../third_party/scintilla/lexers/LexModula.cxx
../../third_party/scintilla/lexers/LexMySQL.cxx
../../third_party/scintilla/lexers/LexNim.cxx
../../third_party/scintilla/lexers/LexNimrod.cxx
../../third_party/scintilla/lexers/LexNsis.cxx
../../third_party/scintilla/lexers/LexNull.cxx
../../third_party/scintilla/lexers/LexOScript.cxx
../../third_party/scintilla/lexers/LexOpal.cxx
../../third_party/scintilla/lexers/LexPB.cxx
../../third_party/scintilla/lexers/LexPLM.cxx
../../third_party/scintilla/lexers/LexPO.cxx
../../third_party/scintilla/lexers/LexPOV.cxx
../../third_party/scintilla/lexers/LexPS.cxx
../../third_party/scintilla/lexers/LexPascal.cxx
../../third_party/scintilla/lexers/LexPerl.cxx
../../third_party/scintilla/lexers/LexPowerPro.cxx
../../third_party/scintilla/lexers/LexPowerShell.cxx
../../third_party/scintilla/lexers/LexProgress.cxx
../../third_party/scintilla/lexers/LexProps.cxx
../../third_party/scintilla/lexers/LexPython.cxx
../../third_party/scintilla/lexers/LexR.cxx
../../third_party/scintilla/lexers/LexRebol.cxx
../../third_party/scintilla/lexers/LexRegistry.cxx
../../third_party/scintilla/lexers/LexRuby.cxx
../../third_party/scintilla/lexers/LexRust.cxx
../../third_party/scintilla/lexers/LexSAS.cxx
../../third_party/scintilla/lexers/LexSML.cxx
../../third_party/scintilla/lexers/LexSQL.cxx
../../third_party/scintilla/lexers/LexSTTXT.cxx
../../third_party/scintilla/lexers/LexScriptol.cxx
../../third_party/scintilla/lexers/LexSmalltalk.cxx
../../third_party/scintilla/lexers/LexSorcus.cxx
../../third_party/scintilla/lexers/LexSpecman.cxx
../../third_party/scintilla/lexers/LexSpice.cxx
../../third_party/scintilla/lexers/LexStata.cxx
../../third_party/scintilla/lexers/LexTACL.cxx
../../third_party/scintilla/lexers/LexTADS3.cxx
../../third_party/scintilla/lexers/LexTAL.cxx
../../third_party/scintilla/lexers/LexTCL.cxx
../../third_party/scintilla/lexers/LexTCMD.cxx
../../third_party/scintilla/lexers/LexTeX.cxx
../../third_party/scintilla/lexers/LexTxt2tags.cxx
../../third_party/scintilla/lexers/LexVB.cxx
../../third_party/scintilla/lexers/LexVHDL.cxx
../../third_party/scintilla/lexers/LexVerilog.cxx
../../third_party/scintilla/lexers/LexVisualProlog.cxx
../../third_party/scintilla/lexers/LexYAML.cxx
)

SET(scintilla_lexlib_src ../../third_party/scintilla/lexlib/Accessor.cxx
../../third_party/scintilla/lexlib/Accessor.h
../../third_party/scintilla/lexlib/CharacterCategory.cxx
../../third_party/scintilla/lexlib/CharacterCategory.h
../../third_party/scintilla/lexlib/CharacterSet.cxx
../../third_party/scintilla/lexlib/CharacterSet.h
../../third_party/scintilla/lexlib/DefaultLexer.cxx
../../third_party/scintilla/lexlib/DefaultLexer.h
../../third_party/scintilla/lexlib/LexAccessor.h
../../third_party/scintilla/lexlib/LexerBase.cxx
../../third_party/scintilla/lexlib/LexerBase.h
../../third_party/scintilla/lexlib/LexerModule.cxx
../../third_party/scintilla/lexlib/LexerModule.h
../../third_party/scintilla/lexlib/LexerNoExceptions.cxx
../../third_party/scintilla/lexlib/LexerNoExceptions.h
../../third_party/scintilla/lexlib/LexerSimple.cxx
../../third_party/scintilla/lexlib/LexerSimple.h
../../third_party/scintilla/lexlib/OptionSet.h
../../third_party/scintilla/lexlib/PropSetSimple.cxx
../../third_party/scintilla/lexlib/PropSetSimple.h
../../third_party/scintilla/lexlib/SparseState.h
../../third_party/scintilla/lexlib/StringCopy.h
../../third_party/scintilla/lexlib/StyleContext.cxx
../../third_party/scintilla/lexlib/StyleContext.h
../../third_party/scintilla/lexlib/SubStyles.h
../../third_party/scintilla/lexlib/WordList.cxx
../../third_party/scintilla/lexlib/WordList.h
)

IF (APPLE)
SET(scintilla_platform_src
../../third_party/scintilla/cocoa/InfoBar.h
../../third_party/scintilla/cocoa/InfoBar.mm
../../third_party/scintilla/cocoa/InfoBarCommunicator.h
../../third_party/scintilla/cocoa/PlatCocoa.h
../../third_party/scintilla/cocoa/PlatCocoa.mm
../../third_party/scintilla/cocoa/QuartzTextLayout.h
../../third_party/scintilla/cocoa/QuartzTextStyle.h
../../third_party/scintilla/cocoa/QuartzTextStyleAttribute.h
../../third_party/scintilla/cocoa/ScintillaCocoa.h
../../third_party/scintilla/cocoa/ScintillaCocoa.mm
../../third_party/scintilla/cocoa/ScintillaView.h
../../third_party/scintilla/cocoa/ScintillaView.mm
../../third_party/scintilla/cocoa/
cocoa/scintilla_cocoa.h cocoa/scintilla_cocoa.mm
)

SET(platform_include_dirs
    "cocoa"
    "../../third_party/scintilla/cocoa/"
    )
ENDIF()

ADD_LIBRARY(scintilla_objs OBJECT
  ${scintilla_src}
)

ADD_LIBRARY(scintilla_lexers_objs OBJECT
  ${scintilla_lexers_src}
)

ADD_LIBRARY(scintilla_lexlib_objs OBJECT
  ${scintilla_lexlib_src}
)

ADD_LIBRARY(scintilla_platform_objs OBJECT
  ${scintilla_platform_src}
)

ADD_LIBRARY(scintilla STATIC
		      $<TARGET_OBJECTS:scintilla_objs>
		      $<TARGET_OBJECTS:scintilla_lexers_objs>
		      $<TARGET_OBJECTS:scintilla_lexlib_objs>
		      $<TARGET_OBJECTS:scintilla_platform_objs>
)

IF (APPLE)
SET_PROPERTY(TARGET scintilla_platform_objs APPEND_STRING PROPERTY
              COMPILE_FLAGS "-fobjc-arc -Wno-unused-parameter -Wno-deprecated-declarations")
ENDIF()


SET(scintilla_include_dirs
  "../../third_party/scintilla/include"
  "../../third_party/scintilla/lexlib"
  "../../third_party/scintilla/src"
  "${platform_include_dirs}"
)

TARGET_INCLUDE_DIRECTORIES(scintilla_objs PRIVATE
  ${scintilla_include_dirs}
)
TARGET_INCLUDE_DIRECTORIES(scintilla_lexers_objs PRIVATE
  ${scintilla_include_dirs}
)
TARGET_INCLUDE_DIRECTORIES(scintilla_lexlib_objs PRIVATE
  ${scintilla_include_dirs}
)
TARGET_INCLUDE_DIRECTORIES(scintilla_platform_objs PRIVATE
  ${scintilla_include_dirs}
)

ADD_LIBRARY(scintilla_interface INTERFACE)

TARGET_INCLUDE_DIRECTORIES(scintilla_interface INTERFACE
  ${scintilla_include_dirs}
)

TARGET_LINK_LIBRARIES(scintilla_interface INTERFACE
  scintilla
)
